--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-scroll": "^1.8.9",
+    "sass": "^1.64.2",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.2"
   }
